[tool.poetry]
name = "oop-2-22"
version = "0.1.0"
description = ""
authors = ["sa1vador77 <uncrowned.blessed@gmail.com>"]
readme = "README.md"
packages = [{include = "oop_2"}]

[tool.poetry.dependencies]
python = "^3.12"
mock = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
